--- a/AF_scratch.ipynb
+++ b/AF_scratch.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "722f326f",
+   "execution_count": 2,
+   "id": "8f533fdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "080b3cbb",
+   "metadata": {},
+   "source": [
+    "### Read in Data Set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 202,
-   "id": "e0a612c5",
+   "execution_count": 3,
+   "id": "a723d726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "id": "d22a2b2a",
+   "execution_count": 4,
+   "id": "ac6e7581",
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "9a55bfcc",
+   "execution_count": 5,
+   "id": "2b908033",
    "metadata": {},
    "outputs": [
     {
@@ -113,111 +121,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c48ec0df",
+   "cell_type": "raw",
+   "id": "a2bfd39a",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in range(raw_data.shape[0]):\n",
-    "#     for k in range(2, raw_data.shape[1]):\n",
-    "#         if (raw_data.iloc[i, k].isnull()):\n",
-    "#             print('true')\n",
-    "# print(raw_data)\n",
-    "# print(raw_data.loc[raw_data['Global_active_power'].isnull()])\n",
-    "print(type(raw_data.iloc[0]))\n",
-    "# print(type(raw_data.il[0]))\n",
-    "# if (raw_data.iloc[0].isnull()):\n",
-    "#     print('is null')\n",
-    "# print(raw_data.iloc[0].isnull())\n",
-    "\n",
-    "for col in range(raw_data.shape[1]):\n",
-    "    count_nan = raw_data.iloc[:,col].isnull().sum()\n",
-    "    last_val = raw_data.iloc[0, col]\n",
-    "    for row in range(raw_data.shape[0]):\n",
-    "#         if (pd.isnull(val)):\n",
-    "#             print('found null')\n",
-    "        idx = row + 1\n",
-    "        while(pd.isnull(raw_data.iloc[row, col])):\n",
-    "            temp = raw_data.iloc[idx, col]\n",
-    "            if (not pd.isnull(temp)):\n",
-    "                raw_data.iloc[row, col] = (last_val + temp) / 2\n",
-    "            idx += 1\n",
-    "        if (row == 0):\n",
-    "            print('Out of while')\n",
-    "            \n",
-    "#     count_nan = 0\n",
-    "    print('Column %s has %d missing values' % (raw_data.iloc[:,i].name, count_nan))\n",
-    "\n",
-    "# for i, v in enumerate(raw_data.iloc[0:10,1]):\n",
-    "#     print('Index %d = %f' % (i, v))\n",
-    "\n",
-    "# print(raw_data.iloc[0, 1])\n",
-    "# if (pd.isnull(raw_data.iloc[0, 1])):\n",
-    "#     print('is nan')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "id": "ab654231",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-130-4d8d2ca933cb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m             \u001b[1;31m# Find next good value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m             \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m             \u001b[1;32mwhile\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m                 \u001b[0midx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0midx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m#             print('out of while')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "for col in raw_data.columns:\n",
-    "#     print(col)\n",
-    "    count_nan = 0\n",
-    "#     count_nan = raw_data[col].isnull().sum()\n",
-    "    last_val = raw_data[col].iloc[0]\n",
-    "#     print(last_val)\n",
-    "    for row, val in enumerate(raw_data[col]):\n",
-    "#         if (pd.isnull(val)):\n",
-    "#             # Find next good value\n",
-    "#             idx = row + 1\n",
-    "#             while (pd.isnull(raw_data[col].iloc[idx])):\n",
-    "#                 idx = idx + 1\n",
-    "# #             print('out of while')\n",
-    "#             new_val = (last_val + raw_data[col].iloc[idx]) / 2\n",
-    "#             raw_data[col].iloc[row] = new_val\n",
-    "#         last_val = raw_data[col].iloc[row]\n",
-    "# #     count_nan = 0\n",
-    "    print('Column %s has %d missing values' % (raw_data[col].name, count_nan))\n",
-    "    break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 270,
-   "id": "547df265",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "[False False False ... False False False]\n",
-      "<class 'tuple'>\n",
-      "[   6839    6840   19724 ... 1990187 1990188 2027411]\n",
-      "25979\n",
-      "25979\n",
-      "nan\n",
-      "[1990188 2027411]\n"
-     ]
-    }
-   ],
    "source": [
     "foo = raw_data.iloc[:,0].isnull()\n",
     "print(type(foo.values))\n",
@@ -232,55 +138,19 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "05bf8521",
+   "cell_type": "markdown",
+   "id": "148cb7f8",
    "metadata": {},
    "source": [
-    "filled_data = raw_data.copy()\n",
-    "\n",
-    "for col in range(filled_data.shape[1]):\n",
-    "    next_good = 0.0\n",
-    "    last_good = 0.0\n",
-    "    last_row = -2\n",
-    "    \n",
-    "    null_series = filled_data.iloc[:, col].isnull()\n",
-    "    null_indices = np.where(null_series.values == True)[0].tolist()\n",
-    "    print(null_indices[:6])\n",
-    "    skip_cnt = 0\n",
-    "    for i in range(len(null_indices)):\n",
-    "        row = null_indices[i]\n",
-    "        \n",
-    "        if (last_row == row - 1):\n",
-    "            new_val = (last_good + next_good) / 2\n",
-    "            filled_data.iat[row, col] = new_val\n",
-    "            last_good = new_val\n",
-    "            continue\n",
-    "            \n",
-    "        if (i == len(null_indices) - 1):\n",
-    "            # This is the last null value in the column. The next row is good.\n",
-    "            filled_data.iat[row, col] = (filled_data.iat[row - 1, col] + filled_data.iat[row + 1, col]) / 2\n",
-    "        else:\n",
-    "            good_idx = 0\n",
-    "            for k in range(i, len(null_indices)):\n",
-    "                if (null_indices[k] != null_indices[k + 1] - 1):\n",
-    "                    good_idx = k\n",
-    "                    break\n",
-    "                elif (k == len(null_indices) - 1):\n",
-    "                    good_idx = k\n",
-    "            next_good = filled_data.iat[null_indices[good_idx] + 1, col]\n",
-    "            last_good = filled_data.iat[row - 1, col]\n",
-    "            new_val = (last_good + next_good) / 2\n",
-    "            filled_data.iat[row, col] = new_val\n",
-    "            last_good = new_val\n",
-    "            last_row = row\n",
-    "                \n",
-    "    print('Column %d cleaned' % col)"
+    "### Fill missing data with average curve\n",
+    "This method of filling the data will replace each missing value with the average of the last good value and the next good value. If there are multiple missing values, the last good value will be updated as each value is filled in. For example, if the series of data is [0, ?, ?, 4], the filled in set will be [0, 2, 3, 4].  \n",
+    "I think this is a reasonable way to fill in power data since power is continuous and can't change value instantaneously. It might be problematic for the regions where there are many values (multiple days worth) missing, though."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
-   "id": "33ebe04a",
+   "execution_count": 7,
+   "id": "cec3e8ab",
    "metadata": {},
    "outputs": [
     {
@@ -296,8 +166,6 @@
     "filled_data = raw_data.copy()\n",
     "\n",
     "for col in range(1):#filled_data.shape[1]):\n",
-    "#     next_good = 0.0\n",
-    "#     last_good = 0.0\n",
     "    last_row = -2\n",
     "    \n",
     "    null_series = filled_data.iloc[:, col].isnull()\n",
@@ -336,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
-   "id": "99b0ae43",
+   "execution_count": 8,
+   "id": "958145d6",
    "metadata": {},
    "outputs": [
     {
@@ -380,6 +248,7 @@
     }
    ],
    "source": [
+    "# Check a few missing value locations to verify the fill worked correctly\n",
     "print(raw_data.iloc[6838])\n",
     "print(filled_data.iloc[6839])\n",
     "print(filled_data.iloc[6840])\n",
@@ -387,9 +256,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85133c47",
+   "metadata": {},
+   "source": [
+    "### Add a new column for apparent power\n",
+    "If I remember my power systems courses correctly, the power utility needs to consider apparent power, which is a combination of both active and reactive power. This next bit of code will calculate the apparent power and add it as a new column. This column will be useful if we want to do analysis related to how much power the utility needs to generate."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 281,
-   "id": "15778317",
+   "execution_count": 9,
+   "id": "6979ea45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,8 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
-   "id": "1d9fba82",
+   "execution_count": 10,
+   "id": "879751ba",
    "metadata": {},
    "outputs": [
     {
@@ -425,26 +303,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 280,
-   "id": "9a736041",
+   "cell_type": "raw",
+   "id": "19e221d6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   a  b  c\n",
-      "0  1  2  3\n",
-      "1  4  5  6\n",
-      "2  7  8  9\n",
-      "   a  b  c        new\n",
-      "0  1  2  3   2.236068\n",
-      "1  4  5  6   6.403124\n",
-      "2  7  8  9  10.630146\n"
-     ]
-    }
-   ],
    "source": [
     "foo = pd.DataFrame([[1, 2, 3], [4, 5, 6], [7, 8, 9]], columns=['a', 'b', 'c'])\n",
     "# foo.set_index(['a', 'b', 'c'])\n",
@@ -460,29 +321,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 247,
-   "id": "da223cde",
+   "cell_type": "raw",
+   "id": "9476f2f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column 0 has 0 bad values.\n",
-      "Column 1 has 0 bad values.\n",
-      "Column 2 has 0 bad values.\n",
-      "Column 3 has 0 bad values.\n",
-      "Column 4 has 0 bad values.\n",
-      "Column 5 has 0 bad values.\n",
-      "Column 6 has 0 bad values.\n",
-      "nan\n",
-      "0.245\n",
-      "0.2455\n",
-      "0.246\n"
-     ]
-    }
-   ],
    "source": [
     "for i in range(filled_data.shape[1]):\n",
     "    bad_cnt = filled_data.iloc[:, i].isnull().sum()\n",
@@ -496,33 +337,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "id": "0f61c5ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "is null\n",
-      "5.36\n",
-      "5.374\n",
-      "5.388\n"
-     ]
-    }
-   ],
-   "source": [
-    "for row, val in enumerate(raw_data.iloc[0:4,0]):\n",
-    "    if (pd.isnull(val)):\n",
-    "        print('is null')\n",
-    "    else:\n",
-    "        print(val)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 99,
-   "id": "7fa10dd6",
+   "id": "9f33d05a",
    "metadata": {},
    "outputs": [
     {
