Added data aggregation by hour/day/month/season.

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9e7e6b8b",
+   "id": "698276fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d503f370",
+   "id": "bc59a41d",
    "metadata": {},
    "source": [
     "### Read in Data Set"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "392903f4",
+   "id": "6b2a0182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fc7122a9",
+   "id": "08e7843e",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "id": "c4ce9405",
+   "id": "8dcd36b8",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a2c18d1",
+   "id": "94c8d9fb",
    "metadata": {},
    "source": [
     "### Fill missing data with average curve\n",
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d19f415c",
+   "id": "768f2475",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "851174c5",
+   "id": "c4a90eb5",
    "metadata": {},
    "source": [
     "# Check a few missing value locations to verify the fill worked correctly\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b227bc7",
+   "id": "ba9e21c8",
    "metadata": {},
    "source": [
     "### Add a new column for apparent power\n",
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4bbe5148",
+   "id": "7f22007a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,19 +177,103 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99698e67",
+   "id": "704ac242",
    "metadata": {},
    "source": [
-    "### Aggregate data by hour/day/season rather than by minute"
+    "### Aggregate data by hour/day/month/season rather than by minute"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b635787f",
+   "execution_count": 312,
+   "id": "6b0beb04",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Global_active_power  Global_reactive_power     Voltage  \\\n",
+      "Date_Time                                                            \n",
+      "2006-10-01             1.901571               0.131397  241.440774   \n",
+      "2007-01-01             1.422664               0.120580  240.650054   \n",
+      "2007-04-01             0.883693               0.125577  237.651833   \n",
+      "2007-07-01             0.799100               0.122131  238.333030   \n",
+      "2007-10-01             1.342161               0.100342  240.772614   \n",
+      "2008-01-01             1.298108               0.092189  240.863683   \n",
+      "2008-04-01             1.044563               0.143538  240.190038   \n",
+      "2008-07-01             0.683049               0.133273  240.109304   \n",
+      "2008-10-01             1.265784               0.099657  241.338747   \n",
+      "2009-01-01             1.296449               0.099723  242.847055   \n",
+      "2009-04-01             1.031554               0.128080  240.858863   \n",
+      "2009-07-01             0.751356               0.169731  241.484303   \n",
+      "2009-10-01             1.261095               0.129326  242.311544   \n",
+      "2010-01-01             1.321115               0.121701  242.624206   \n",
+      "2010-04-01             1.031445               0.132274  240.991049   \n",
+      "2010-07-01             0.811980               0.138687  240.850327   \n",
+      "2010-10-01             1.178627               0.125385  241.505340   \n",
+      "\n",
+      "            Global_intensity  Sub_metering_1  Sub_metering_2  Sub_metering_3  \\\n",
+      "Date_Time                                                                      \n",
+      "2006-10-01          8.031117        27534.75       48761.250    1.629858e+05   \n",
+      "2007-01-01          6.014953       164786.00      248685.500    8.902795e+05   \n",
+      "2007-04-01          3.833693       177488.00      180529.500    6.084858e+05   \n",
+      "2007-07-01          3.472192       132144.00      180932.250    6.070170e+05   \n",
+      "2007-10-01          5.649873       168132.50      244546.000    9.182085e+05   \n",
+      "2008-01-01          5.474578       165100.00      198836.000    8.478485e+05   \n",
+      "2008-04-01          4.460052       168892.00      193230.250    8.764035e+05   \n",
+      "2008-07-01          2.966504       103562.00      111270.000    5.911920e+05   \n",
+      "2008-10-01          5.319799       147268.50      158655.750    8.661693e+05   \n",
+      "2009-01-01          5.412525       186441.50      172086.500    9.545545e+05   \n",
+      "2009-04-01          4.378020       129438.00      132505.875    9.614620e+05   \n",
+      "2009-07-01          3.264338       103851.00      126889.000    6.766158e+05   \n",
+      "2009-10-01          5.270907       172975.00      160694.000    1.046998e+06   \n",
+      "2010-01-01          5.499772       138247.50      173060.500    1.132052e+06   \n",
+      "2010-04-01          4.371333       152051.50      136535.000    1.007668e+06   \n",
+      "2010-07-01          3.484645        67068.00      108300.000    7.124375e+05   \n",
+      "2010-10-01          4.965795        94361.00      102524.000    5.627825e+05   \n",
+      "\n",
+      "            Global_apparent_power  \n",
+      "Date_Time                          \n",
+      "2006-10-01               1.914312  \n",
+      "2007-01-01               1.436422  \n",
+      "2007-04-01               0.904888  \n",
+      "2007-07-01               0.822701  \n",
+      "2007-10-01               1.352207  \n",
+      "2008-01-01               1.307258  \n",
+      "2008-04-01               1.066288  \n",
+      "2008-07-01               0.712347  \n",
+      "2008-10-01               1.275130  \n",
+      "2009-01-01               1.305802  \n",
+      "2009-04-01               1.049058  \n",
+      "2009-07-01               0.787169  \n",
+      "2009-10-01               1.276237  \n",
+      "2010-01-01               1.334148  \n",
+      "2010-04-01               1.049489  \n",
+      "2010-07-01               0.836396  \n",
+      "2010-10-01               1.193398  \n"
+     ]
+    }
+   ],
+   "source": [
+    "hourly_data = filled_data.resample('H').agg({'Global_active_power': np.mean, 'Global_reactive_power': np.mean, 'Voltage': np.mean,\n",
+    "                                'Global_intensity': np.mean, 'Sub_metering_1': np.sum, 'Sub_metering_2': np.sum,\n",
+    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean})\n",
+    "\n",
+    "daily_data = filled_data.resample('D').agg({'Global_active_power': np.mean, 'Global_reactive_power': np.mean, 'Voltage': np.mean,\n",
+    "                                'Global_intensity': np.mean, 'Sub_metering_1': np.sum, 'Sub_metering_2': np.sum,\n",
+    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean})\n",
+    "\n",
+    "monthly_data = filled_data.resample('MS').agg({'Global_active_power': np.mean, 'Global_reactive_power': np.mean, 'Voltage': np.mean,\n",
+    "                                'Global_intensity': np.mean, 'Sub_metering_1': np.sum, 'Sub_metering_2': np.sum,\n",
+    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean})\n",
+    "\n",
+    "season_data = filled_data.resample('QS-JUL').agg({'Global_active_power': np.mean, 'Global_reactive_power': np.mean, 'Voltage': np.mean,\n",
+    "                                'Global_intensity': np.mean, 'Sub_metering_1': np.sum, 'Sub_metering_2': np.sum,\n",
+    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean})\n",
+    "\n",
+    "# print(season_data)"
+   ]
   }
  ],
  "metadata": {
