Forgot to include the new energy remainder column in the aggregate dataframes.

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 436,
-   "id": "b3354851",
+   "id": "c6413ebd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dec8dd4",
+   "id": "a9425560",
    "metadata": {},
    "source": [
     "### Read in Data Set"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 437,
-   "id": "fcc1c5f3",
+   "id": "753ea545",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 438,
-   "id": "eaa88da4",
+   "id": "bb08383f",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 439,
-   "id": "a09f5fcf",
+   "id": "a2fe357d",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 440,
-   "id": "c0c91a45",
+   "id": "b0e14a33",
    "metadata": {
     "scrolled": true
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c30d404b",
+   "id": "a76a91da",
    "metadata": {},
    "source": [
     "### Fill missing data with average curve\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 441,
-   "id": "68f5655c",
+   "id": "de3e4cb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 442,
-   "id": "b7a4da2c",
+   "id": "d24f77b0",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 443,
-   "id": "646af5ff",
+   "id": "41a103e6",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132a931d",
+   "id": "c5cf2c28",
    "metadata": {},
    "source": [
     "### Add a new column for apparent power and sub-metering remainder\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 444,
-   "id": "557003bc",
+   "id": "44794a61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce406de",
+   "id": "19c1daa8",
    "metadata": {},
    "source": [
     "### Aggregate data by hour/day/month/season rather than by minute"
@@ -273,25 +273,29 @@
   {
    "cell_type": "code",
    "execution_count": 445,
-   "id": "626f24df",
+   "id": "7f01ca7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "hourly_data = filled_data.resample('H').agg({'Global_active_power': np.mean, 'Global_reactive_power': np.mean, 'Voltage': np.mean,\n",
     "                                'Global_intensity': np.mean, 'Sub_metering_1': np.sum, 'Sub_metering_2': np.sum,\n",
-    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean})\n",
+    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean,\n",
+    "                                'Sub_metering_remainder': np.sum})\n",
     "\n",
     "daily_data = filled_data.resample('D').agg({'Global_active_power': np.mean, 'Global_reactive_power': np.mean, 'Voltage': np.mean,\n",
     "                                'Global_intensity': np.mean, 'Sub_metering_1': np.sum, 'Sub_metering_2': np.sum,\n",
-    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean})\n",
+    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean,\n",
+    "                                'Sub_metering_remainder': np.sum})\n",
     "\n",
     "monthly_data = filled_data.resample('MS').agg({'Global_active_power': np.mean, 'Global_reactive_power': np.mean, 'Voltage': np.mean,\n",
     "                                'Global_intensity': np.mean, 'Sub_metering_1': np.sum, 'Sub_metering_2': np.sum,\n",
-    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean})\n",
+    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean,\n",
+    "                                'Sub_metering_remainder': np.sum})\n",
     "\n",
     "seasonal_data = filled_data.resample('QS-JUL').agg({'Global_active_power': np.mean, 'Global_reactive_power': np.mean, 'Voltage': np.mean,\n",
     "                                'Global_intensity': np.mean, 'Sub_metering_1': np.sum, 'Sub_metering_2': np.sum,\n",
-    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean})\n",
+    "                                'Sub_metering_3': np.sum, 'Global_apparent_power': np.mean,\n",
+    "                                'Sub_metering_remainder': np.sum})\n",
     "\n",
     "# print(seasonal_data)"
    ]
@@ -299,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 446,
-   "id": "ddf03ee2",
+   "id": "ee0a9cf6",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 435,
-   "id": "a8c0de21",
+   "id": "2d528bbd",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5641663",
+   "id": "2776dfb2",
    "metadata": {},
    "source": [
     "### Classify power usage as low, average, high, or spike (increasing over last reading by some amount)"
@@ -385,7 +389,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "5ccfcc65",
+   "id": "5058fbc0",
    "metadata": {},
    "source": [
     "print(filled_data['Global_apparent_power'].mean())\n",
@@ -403,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 453,
-   "id": "b368240c",
+   "id": "b35b6899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,10 +446,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
-   "id": "ab4a34aa",
+   "execution_count": 456,
+   "id": "76ba2101",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4.216 0.418]\n",
+      " [5.36  0.436]]\n"
+     ]
+    }
+   ],
    "source": [
     "class_data = AddClasses(filled_data)"
    ]
