Added a KNN classifier to try to classify power usage level based on energy in the sub-regions. Doesn't work too well, but I didn't expect much.

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 436,
-   "id": "c6413ebd",
+   "execution_count": 1,
+   "id": "ec6ab8a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9425560",
+   "id": "10277753",
    "metadata": {},
    "source": [
     "### Read in Data Set"
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
-   "id": "753ea545",
+   "execution_count": 2,
+   "id": "508c2e89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
-   "id": "bb08383f",
+   "execution_count": 3,
+   "id": "897a5c75",
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
-   "id": "a2fe357d",
+   "execution_count": 4,
+   "id": "e6a3c7ce",
    "metadata": {},
    "outputs": [
     {
@@ -78,33 +78,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 440,
-   "id": "b0e14a33",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21996 records from year 2006\n",
-      "525600 records from year 2007\n",
-      "527040 records from year 2008\n",
-      "525600 records from year 2009\n",
-      "475023 records from year 2010\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in ['2006', '2007', '2008', '2009', '2010']:\n",
-    "    print('%d records from year %d' % (class_data.loc[i].shape[0], int(i)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "a76a91da",
+   "id": "91b57a60",
    "metadata": {},
    "source": [
     "### Fill missing data with average curve\n",
@@ -114,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
-   "id": "de3e4cb1",
+   "execution_count": 6,
+   "id": "093dd35c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
-   "id": "d24f77b0",
+   "execution_count": 7,
+   "id": "0aef1882",
    "metadata": {},
    "outputs": [
     {
@@ -186,8 +161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
-   "id": "41a103e6",
+   "execution_count": 8,
+   "id": "24e0a305",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5cf2c28",
+   "id": "b0104c7b",
    "metadata": {},
    "source": [
     "### Add a new column for apparent power and sub-metering remainder\n",
@@ -248,8 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
-   "id": "44794a61",
+   "execution_count": 9,
+   "id": "2591e535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c1daa8",
+   "id": "881b4d79",
    "metadata": {},
    "source": [
     "### Aggregate data by hour/day/month/season rather than by minute"
@@ -272,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
-   "id": "7f01ca7d",
+   "execution_count": 10,
+   "id": "f2094561",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,8 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
-   "id": "ee0a9cf6",
+   "execution_count": 11,
+   "id": "4ee2fc0e",
    "metadata": {},
    "outputs": [
     {
@@ -354,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
-   "id": "2d528bbd",
+   "execution_count": 12,
+   "id": "0f011054",
    "metadata": {},
    "outputs": [
     {
@@ -369,8 +344,8 @@
       "Sub_metering_1              0.000000\n",
       "Sub_metering_2              1.000000\n",
       "Sub_metering_3             17.000000\n",
-      "Global_apparent_power       4.236671\n",
       "Sub_metering_remainder     52.266667\n",
+      "Global_apparent_power       4.236671\n",
       "Name: 2006-12-16 17:24:00, dtype: float64\n"
      ]
     }
@@ -381,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2776dfb2",
+   "id": "965fee73",
    "metadata": {},
    "source": [
     "### Classify power usage as low, average, high, or spike (increasing over last reading by some amount)"
@@ -389,7 +364,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "5058fbc0",
+   "id": "7ecfdefc",
    "metadata": {},
    "source": [
     "print(filled_data['Global_apparent_power'].mean())\n",
@@ -406,8 +381,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
-   "id": "b35b6899",
+   "execution_count": 13,
+   "id": "f19aac7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,21 +421,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
-   "id": "76ba2101",
+   "execution_count": 14,
+   "id": "aa0d2708",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_data = AddClasses(hourly_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe9ed095",
+   "metadata": {},
+   "source": [
+    "### Split data into train/test based on year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2790b37a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = class_data.loc[:'2009'][['Sub_metering_1', 'Sub_metering_2', 'Sub_metering_3', 'Sub_metering_remainder']]\n",
+    "train_classes = class_data.loc[:'2009']['Class']\n",
+    "test = class_data.loc['2010':][['Sub_metering_1', 'Sub_metering_2', 'Sub_metering_3', 'Sub_metering_remainder']]\n",
+    "test_classes = class_data.loc['2010':]['Class']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "947c8523",
+   "metadata": {},
+   "source": [
+    "### Run KNN on the hourly data  \n",
+    "This doesn't seem like a very worthwhile thing to do, but let's try it anyway."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7ddd698f",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.216 0.418]\n",
-      " [5.36  0.436]]\n"
+      "0.8205354887597879\n",
+      "262 / 837 spikes correct (0.313023)\n",
+      "\n",
+      "0.8714321798433948\n",
+      "110 / 837 spikes correct (0.131422)\n",
+      "\n",
+      "0.8562768375852488\n",
+      "217 / 837 spikes correct (0.259259)\n",
+      "\n",
+      "0.8699166456175802\n",
+      "124 / 837 spikes correct (0.148148)\n",
+      "\n",
+      "0.8671381662035867\n",
+      "203 / 837 spikes correct (0.242533)\n",
+      "\n",
+      "0.8735791866632988\n",
+      "140 / 837 spikes correct (0.167264)\n",
+      "\n",
+      "0.869032583985855\n",
+      "196 / 837 spikes correct (0.234170)\n",
+      "\n",
+      "0.8749684263702955\n",
+      "142 / 837 spikes correct (0.169654)\n",
+      "\n",
+      "0.871179590805759\n",
+      "181 / 837 spikes correct (0.216249)\n",
+      "\n",
+      "0.8764839605961101\n",
+      "146 / 837 spikes correct (0.174432)\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "class_data = AddClasses(filled_data)"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "for i in range(1, 11):\n",
+    "    knn = KNeighborsClassifier(n_neighbors=i)\n",
+    "    knn.fit(train, train_classes)\n",
+    "    \n",
+    "    predictions = knn.predict(test)\n",
+    "    score = knn.score(test, test_classes)\n",
+    "    print(score)\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    for k in range(len(predictions)):\n",
+    "        if (test_classes.iloc[k] == 3):\n",
+    "            total += 1\n",
+    "            if (predictions[k] == 3):\n",
+    "                correct += 1\n",
+    "\n",
+    "    print('%d / %d spikes correct (%f)' % (correct, total, float(correct) / total))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f92638a4",
+   "metadata": {},
+   "source": [
+    "Doesn't find spikes very well, but I can't say I expected it to. It doesn't know anything about what happened in the previous time step, just what the energy usage was for this time step."
    ]
   }
  ],
